syntax = "proto3";

package protobuf;

//import "google/protobuf/any.proto";
//import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_package = "moonbox.message.protobuf";
//option java_outer_classname = "Protos";
option java_multiple_files = true;

message ProtoMessage {
    int64 messageId = 1;
    oneof messages {
        LoginInbound login_inbound = 2;
        LoginOutbound login_outbound = 3;
        LogoutInbound logout_inbound = 4;
        LogoutOutbound logout_outbound = 5;
        OpenSessionInbound open_session_inbound = 6;
        OpenSessionOutbound open_session_outbound = 7;
        CloseSessionInbound close_session_inbound = 8;
        CloseSessionOutbound close_session_outbound = 9;
        InteractiveQueryInbound interactive_query_inbound = 10;
        InteractiveQueryOutbound interactive_query_outbound = 11;
        InteractiveNextResultInbound interactive_next_result_inbound = 12;
        InteractiveNextResultOutbound interactive_next_result_outbound = 13;
        BatchQueryInbound batch_query_inbound = 14;
        BatchQueryOutbound batch_query_outbound = 15;
        BatchQueryProgressInbound batch_query_progress_inbound = 16;
        BatchQueryProgressOutbound batch_query_progress_outbound = 17;
        InteractiveQueryCancelInbound interactive_query_cancel_inbound = 18;
        InteractiveQueryCancelOutbound interactive_query_cancel_outbound = 19;
        BatchQueryCancelInbound batch_query_cancel_inbound = 20;
        BatchQueryCancelOutbound batch_query_cancel_outbound = 21;
        InternalError internal_error = 22;
    }
}

/* login */
message LoginInbound {
    string username = 1;
    string password = 2;
}
message LoginOutbound {
    string token = 1;
    string error = 2;
}
/* logout */
message LogoutInbound {
    string token = 1;
}
message LogoutOutbound {
    string error = 1;
}
/* open session */
message OpenSessionInbound {
    string token = 1;
    string database = 2;
    map<string, string> config = 3;
}
message OpenSessionOutbound {
    string session_id = 1;
    string worker_host = 2;
    int32 worker_port = 3;
    string error = 4;
}
/* close session */
message CloseSessionInbound {
    string token = 1;
    string session_id = 2;
}
message CloseSessionOutbound {
    string error = 1;
}
/* interactive qeury */
message InteractiveQueryInbound {
    string token = 1;
    string session_id = 2;
    repeated string sql = 3; //Seq[String]
    google.protobuf.Int32Value fetch_size = 4;
    google.protobuf.Int32Value max_rows = 5;
}
message InteractiveQueryOutbound {
    string error = 1;
//    bool has_result = 2;
    ResultData result_data = 3;
}
message ResultData {
    string cursor = 1;
    string schema = 2;
    Data data = 3; // data Seq[Seq[Any]]
    bool has_next = 4;
}
/* next result */
message InteractiveNextResultInbound {
    string token = 1;
    string session_id = 2;
//    string cursor = 3;
//    int32 fetch_size = 4;
}
message InteractiveNextResultOutbound {
    string error = 1;
    ResultData data = 2;
}
/* batch query */
message BatchQueryInbound {
    string username = 1;
    string password = 2;
    string lang = 3;
    repeated string sql = 4; //Seq[String]
    map<string, string> config = 5; // or Map[String, String]
}
message BatchQueryOutbound {
    string job_id = 1;
    string error = 2;
}
/* batch query progress */
message BatchQueryProgressInbound {
    string username = 1;
    string password = 2;
    string job_id = 3;
}
message BatchQueryProgressOutbound {
    string message = 1;
    string state = 2;
}
/* interactive query cancel */
message InteractiveQueryCancelInbound {
    string token = 1;
    string session_id = 2;
}
message InteractiveQueryCancelOutbound {
    string error = 1;
}
/* batch query cancel */
message BatchQueryCancelInbound {
    string username = 1;
    string password = 2;
    string job_id = 3;
}
message BatchQueryCancelOutbound {
    string error = 1;
}

message InternalError {
    string error = 1;
}

/* data */
message Data {
    repeated Row row = 1;
}
message Row {
    repeated Cell cell = 1;
}
message Cell {
    oneof objects {
        string string_value = 1;
        int64 long_value = 2;  // long, timestamp, date
        int32 int_value = 3;  // byte, short, int
        bool boolean_value = 4;
        BDecimal big_decimal = 5;  // java.math.BigDecimal
        bytes byte_array = 6;  // Array[Byte] and other java objects
        double double_value = 7;
        float float_value = 8;
        // map v6 = 14;
        // struct v6 = 14;
    }
}
/* BigDecimal */
message BDecimal {
    int32 scale = 1;
    BInteger int_val = 2;
}
message BInteger {
    bytes value = 1;
}
